test/expressions/new-expr/new-on-domain.chpl
proc main() {
  var x : int = new domain(1);

  writeln(x);
}
